--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8">
   <title>RCOS Handbook</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Single source of truth for RCOS guidelines, procedures, history, and more.">
-  <meta name="author" content="RCOS Coordinators & Faculty Advisors">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
@@ -63,25 +61,16 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: "RCOS Handbook",
-      repo: "rcos/rcos-handbook",
-      coverpage: true,
-      loadSidebar: true,
+      name: "DITA tech writer portfolio",
+      repo: "ditatechwriter/portfolio",
+      coverpage: 'coverpage.md',
+      loadSidebar: 'index.md',
       loadNavbar: false,
       maxDepth: 2,
       subMaxLevel: 2,
       executeScript: true,
       search: [
         "/",
-        "/mentoring/",
-        "/grading/",
-        "/meetings/",
-        "/teams/",
-        "/coordinating/",
-        "/events/",
-        "/membership/",
-        "/resources/",
-        "/community/"
       ]
     }
   </script>
