--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="https://unpkg.com/@popperjs/core@2"></script>
   <script src="https://unpkg.com/tippy.js@6"></script>
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light.css" />
+  <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css"/>
   <style>
     /* RCOS Calendar styles */
     .tippy-box {
@@ -48,19 +49,33 @@
     window.$docsify = {
       name: "DITA tech writer portfolio",
       repo: "ditatechwriter/portfolio",
+      homepage: 'Dita-dac.md',
       coverpage: 'coverpage.md',
       loadSidebar: 'index.md',
-      loadNavbar: false,
       maxDepth: 2,
-      subMaxLevel: 2,
+      subMaxLevel: 1,
       executeScript: true,
-      search: [
-        "/",
-      ]
+      search: {
+        paths: 'auto',
+      },
+      toc: {
+        scope: '.markdown-section',
+        headings: 'h1, h2, h3, h4, h5, h6',
+        title: 'Table of Contents',
+      },
+     copyCode: {
+       buttonText : 'Copy to clipboard',
+       errorText  : 'Error',
+       successText: 'Copied'
+      },
     }
   </script>
   <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
-  <script src="https://unpkg.com/docsify/lib/plugins/search.min.js"></script>
+  <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
+  <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script>
+  <script src="https://unpkg.com/docsify-copy-code@2"></script>
+  <!--script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script-->
 </body>
 
 </html>
