--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>RCOS Handbook</title>
+  <title>Michael McLoughlin DITA Tech Writer</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -15,32 +15,7 @@
   <script src="https://unpkg.com/tippy.js@6"></script>
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light.css" />
   <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css"/>
-  <style>
-    /* RCOS Calendar styles */
-    .tippy-box {
-      min-width: 250px;
-    }
 
-    .tippy-content .meeting-title {
-      font-size: 1.5em;
-    }
-
-    .tippy-content .meeting-type {
-      color: #707372;
-      font-size: 1.2em;
-      text-transform: capitalize;
-      margin: 0;
-    }
-
-    .tippy-content .meeting-agenda {
-      margin-top: 10px;
-    }
-
-    .tippy-content .meeting-agenda ul {
-      margin-top: 0;
-      line-height: 1.1;
-    }
-  </style>
 </head>
 
 <body>
@@ -52,6 +27,7 @@
       homepage: 'Dita-dac.md',
       coverpage: 'coverpage.md',
       loadSidebar: 'index.md',
+      loadNavbar: 'navbar.md',
       maxDepth: 2,
       subMaxLevel: 1,
       executeScript: true,
@@ -61,33 +37,19 @@
       toc: {
         scope: '.markdown-section',
         headings: 'h1, h2, h3, h4, h5, h6',
-        title: 'Table of Contents',
+        title: 'On this page',
       },
      copyCode: {
        buttonText : 'Copy to clipboard',
        errorText  : 'Error',
        successText: 'Copied'
       },
-      EditOnGithubPlugin.create(
-           'https://github.com/ditatechwriter/portfolio/blob/master/',
-            null,
-           function(file) {
-             if (file.indexOf('en') === -1) {
-              return 'Edit Online'
-           } else {
-              return 'edit on git'
-         }
-        }
-       )
     }
   </script>
   <script src="https://unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
   <script src="https://unpkg.com/docsify-toc@1.0.0/dist/toc.js"></script>
   <script src="https://unpkg.com/docsify-copy-code@2"></script>
-  <!--script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script-->
-  <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
 </body>
 
 </html>
