--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         headings: 'h1, h2, h3, h4, h5, h6',
         title: 'On this page',
       },
+      'flexible-alerts': {
+      style: 'flat'
+      },
       plugins: [
       EditOnGithubPlugin.create('https://github.com/ditatechwriter/portfolio/blob/main/')
       ]
@@ -55,5 +58,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-xml-doc.min.js" integrity="sha512-7UKWE2rgzbPpx1Yu/BPH7bHTHiIjheYAtyVQUxAjyBjet5956cCO8cFZbMpMkwHt6U7Eg1PciDXNTsGt4Dz33g==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/components/prism-bash.min.js" integrity="sha512-JvRd44DHaJAv/o3wxi/dxhz2TO/jwwX8V5/LTr3gj6QMQ6qNNGXk/psoingLDuc5yZmccOq7XhpVaelIZE4tsQ==" crossorigin="anonymous"></script>
 </body>
-
+  <script src="https://unpkg.com/docsify-plugin-flexible-alerts"></script>
 </html>
