--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: "DITA tech writer portfolio",
-      repo: "ditatechwriter/portfolio",
+      name: 'DITA tech writer portfolio'+
+        '<select id="version-selector" name="version" class="sidebar-version-select">' +
+          '<option value="">v1.0-edge</value>' +
+          '<option value="v1">v1.0</value>' +
+          '<option value="v06">v0.6</value>' +
+        '</select>',
+      repo: 'ditatechwriter/portfolio',
       homepage: 'Dita-dac.md',
       coverpage: 'coverpage.md', 
       themeColor: '#5e1cda',
