--- a/index.html
+++ b/index.html
@@ -2,57 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"/>
   <title>RCOS Handbook</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
-  <link rel="stylesheet" href="theme.css"/>
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
   <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light.css" />
   <link rel="stylesheet" href="https://unpkg.com/docsify-toc@1.0.0/dist/toc.css"/>
-  <style>
-    /* RCOS Calendar styles */
-    .tippy-box {
-      min-width: 250px;
-    }
-
-    .tippy-content .meeting-title {
-      font-size: 1.5em;
-    }
-
-    .tippy-content .meeting-type {
-      color: #707372;
-      font-size: 1.2em;
-      text-transform: capitalize;
-      margin: 0;
-    }
-
-    .tippy-content .meeting-agenda {
-      margin-top: 10px;
-    }
-
-    .tippy-content .meeting-agenda ul {
-      margin-top: 0;
-      line-height: 1.1;
-    }
-  </style>
 </head>
 
 <body>
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: "DITA tech writer portfolio",
+      name: "DITA tech writer",
+      nameLink: '/intro.md',
       repo: "ditatechwriter/portfolio",
-      homepage: 'Dita-dac.md',
-      coverpage: 'coverpage.md',
+      homepage: 'intro.md',
+      coverpage: false,
+      auto2top: true,
       loadSidebar: 'index.md',
       maxDepth: 2,
       subMaxLevel: 1,
-      executeScript: true,
       search: {
         paths: 'auto',
+        hideOtherSidebarContent: true,
+        depth: 3,
       },
       toc: {
         scope: '.markdown-section',
